# ARC-RL

./: .env.example  .gitignore  ARC_AGI_REFERENCE.md  ARC_program_synthesis_RL_survey.md  GPRO_USAGE.md  GRPO_TRAINING.md  README.md  baseline.py  brainstorm.md  config.yaml  config.yaml.example  config_arc2_simple.yaml  config_arc2_simple_gl.yaml  deploy_vllm.sh  endpoint.yaml.example  plan.md  pyproject.toml  requirements.txt  response_dump.json  response_dump_3cd86f4f.json  response_dump_69baf5e3.json  response_dump_69baf801.json  response_dump_69baf941.json  response_dump_69bafa5e.json  results_qwen_ARC-AGI_evaluation.json  results_role_qwen_ARC-AGI_evaluation.json  run_ablation.sh  run_all.sh  run_arc2_simple.sh  run_gpro.sh  run_hybrid_colab (1).ipynb  run_oneshot.sh  test_native_raw.py
arc_eval/: code_extract.py  config.py  db.py  evaluate.py  export_grpo_data.py  gpro.py  grpo_train.py  llm_client.py  prompt.py  report.py  run.py  safe_exec.py
checkpoints/: stage_a.pt
docs/: baseline_results.md  dataset_analysis.md  dataset_overlap.md  deploy.md  deploy_singularity.md  eval.md  llm_response.md  qwen35_deploy_guide.md  qwen36_grpo.md  recovery_analysis.md  tree_search.md
eval/: eval.py  full_result.json
reference_solutions/: SUMMARY.md  download.py
results/: comprehensive_metrics.py  plot_poster_figures.py  plot_results.py  poster_analysis.py  result.py
role_induction/: dataset.py  evaluate.py  grid_utils.py  llm_synthesizer.py  losses.py  models.py  pipeline.py  role_inducer.py  train.py  verifier.py
scripts/: run_cases_100_200.sbatch  (+3 more)
(+839 files in other folders)
