[project]
name = "arc-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "python-dotenv",
    "PyYAML",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = [
    "endpoint: tests that require a live LLM endpoint (deselect with '-m not endpoint')",
]
