[project]
name = "arc-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.66",
    "python-dotenv",
    "PyYAML",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = [
    "llm: tests that make real LLM API calls (deselect with '-m not llm')",
]
