[project]
name = "arc-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.66",
    "python-dotenv",
    "PyYAML",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = ["api: marks tests that call live LLM APIs (deselect with '-m not api')"]